# nextjs_flask_crud

backend/dev/api/: .env.dev  Dockerfile.dev  docker-compose.dev.yml  pyproject.toml
backend/dev/api/api/: mysql.py  mysql_article.py  todos.db
backend/dev/api/restclient/mysql/: get_by_name.rest  post.rest  put.rest
backend/prod/api/: .env.prod  .gitignore  Dockerfile.prod  docker-compose.prod.yaml  pyproject.toml
backend/prod/api/api/: hello.py  mysql_article.py  requirements.txt
backend/prod/api/api/config/: gunicorn.py
backend/prod/api/db/: .env.dev  .env.prod
backend/prod/api/migrations/versions/: 2ef1ec51ae88_.py  70ea8d26528c_.py
backend/prod/api/nginx/: default.conf
backend/prod/api/restclient/mysql/: delete.rest  get.rest
backend/prod/api/restclient/mysql/article/: get.rest  get_comments.rest  post.rest
backend/prod/api/restclient/mysql/author/: get_article.rest
backend/prod/api/restclient/mysql/comment/: post.rest
backend/prod/api/restclient/sqlite/: post.rest
frontend/prod/: .env.development  .env.production  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
frontend/prod/src/app/: layout.tsx  page.tsx
frontend/prod/src/app/api/: route.ts
frontend/prod/src/app/articles/: not-found.tsx
frontend/prod/src/app/components/: ArticleCard.tsx  ArticleList.tsx  DeleteTodoButton.tsx  EditTodoForm.tsx
frontend/prod/src/app/types/: TestItem.ts  (+2 more)
terraform/: .terraform.lock.hcl  alb.tf  ecs.tf  main.tf  rds.tf  route53_acm.tf  security_group.tf  vpc.tf
(+9 files in other folders)
