[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["removable4463 <removable4463@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
